@@ -1,5 +1,7 @@
 v0.3.1 (unreleased):
 
+- Added a `--prune` flag to delete remote-tracking branches that no longer
+  exist on their remote after fetching.
 - Fixed a bug related to Python 3 compatibility.
 
 v0.3 (released June 7, 2015):
